fix word-wrap

--- a/src/pages/Post/Post.styles.scss
+++ b/src/pages/Post/Post.styles.scss
@@ -13,6 +13,7 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
+        word-wrap: break-word;
         color: #242729;
         h1 {
             width: 80%;
